src/tests/golden/invalid_il/wrong_extern_sig.il
il 0.1
extern @rt_print_str(i64) -> void
func @main() -> i64 {
entry:
  ret 0
}

